tools/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: multicluster-observability-grafana-dev
  name: grafana-dev
  namespace: open-cluster-management-observability
spec:
  ports:
  - name: grafana-dev-http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: multicluster-observability-grafana-dev
  type: ClusterIP
